--- a/src/energy.tex
+++ b/src/energy.tex
@@ -276,7 +276,7 @@ In a weather/climate model TE conservation errors can appear in many places thro
 \begin{itemize}
 \item Horizontal inviscid dynamics: Energy errors resulting from solving the inviscid, adiabatic equations of motion.
 \item Hyperviscosity: Filtering errors.
-\item Vertical remapping: The vertical remapping algorithm from Largangian to pressure surfaces does not conserve TE.
+\item Vertical remapping: The vertical remapping algorithm from Lagrangian to pressure surfaces does not conserve TE.
 \item Near round-off negative values of water vapor which are filled to a minimal value without compensation.
 \end{itemize}
 \item {\em{Physics-dynamics coupling (PDC)}}: Assume that physics computes a tendency. Usually the tendency (forcing) is passed to the dynamical core which is responsible for adding the tendencies to the state. PDC energy errors can be split into three types:
@@ -293,7 +293,7 @@ The discrete global averages $\gi{(\cdot)}$ are computed consistent with the dis
 \begin{equation}
 \partial \gi{E}\equiv \frac{d\gi{E}}{dt}.
 \end{equation}
-By computing the global TE averages $\gi{E}$ at appropriate places in the model algorithms, we can directly compute $\partial \gi{E}$ due to various processes (such as viscosity, vertical remapping, physics-dynamics coupling, pressure work, etc.) by differencing $\gi{E}$ from after and before the algorithm takes place. This has been implemented using CAM history infrastructure by computing column integrals of energy at various places in CAM and outputting the 2D energy fields. CAM history internally handles accumulation and averaging in time at each horizontal grid point. The global averages are computet externally from the grid point vertical integrals on the history files. The places in CAM where we compute/capture the grid point vertical integral $E$ are named using three letters where the first letter refers to whether the vertical integral is performed in physics (`p') or in the dynamical core (`d'). The trailing to letters refer to the specific location in dynamics or physics. For example, 'BP' refers to `Before Physics' and `AP' to `After Physics'; the associated total energies are denoted ${E}_{pBP}$ and ${E}_{pAP}$, respectively. The TE tendency from the parameterizations is the difference between ${E}_{pBP}$ and ${E}_{pAP}$ divided by the time-step. The terms and tendency are then averaged globally externally to the model. The pseudo-code in Figure \ref{fig:dAD} defines the acronyms in terms of where in the CAM-SE algorithm the TE vertical integrals are computed and output. For details on the CAM-SE algorithm please see \citet{LetAl2018JAMES}.
+By computing the global TE averages $\gi{E}$ at appropriate places in the model algorithms, we can directly compute $\partial \gi{E}$ due to various processes (such as viscosity, vertical remapping, physics-dynamics coupling, pressure work, etc.) by differencing $\gi{E}$ from after and before the algorithm takes place. This has been implemented using CAM history infrastructure by computing column integrals of energy at various places in CAM and outputting the 2D energy fields. CAM history internally handles accumulation and averaging in time at each horizontal grid point. The global averages are computed externally from the grid point vertical integrals on the history files. The places in CAM where we compute/capture the grid point vertical integral $E$ are named using three letters where the first letter refers to whether the vertical integral is performed in physics (`p') or in the dynamical core (`d'). The trailing to letters refer to the specific location in dynamics or physics. For example, 'BP' refers to `Before Physics' and `AP' to `After Physics'; the associated total energies are denoted ${E}_{pBP}$ and ${E}_{pAP}$, respectively. The TE tendency from the parameterizations is the difference between ${E}_{pBP}$ and ${E}_{pAP}$ divided by the time-step. The terms and tendency are then averaged globally externally to the model. The pseudo-code in Figure \ref{fig:dAD} defines the acronyms in terms of where in the CAM-SE algorithm the TE vertical integrals are computed and output. For details on the CAM-SE algorithm please see \citet{LetAl2018JAMES}.
 
 Before defining the individual terms in detail we briefly review the model time stepping sequence starting with the physics component as illustrated in Figure \ref{fig:dAD}. The energy fixer is applied first to compensate for the spurious net energy change from all components introduced during the previous time step. We will describe this in more detail after the various sources and sinks are elucidated. The parameterizations are applied next and are required to be energy conserving. They update the state and accumulate the total physics tendency (forcing). At this stage the state is saved for use in the energy fixer in the next time step. Any changes in the global average energy after this are spurious and are compensated by the fixer. The parameterizations update the water vapor but not the moist pressure, implying a non-physical change in the dry mass of the atmosphere. The dry mass correction corrects the dry mass back to its proper value.
 
@@ -393,7 +393,7 @@ In CAM-SE there are 3 physics-dynamics coupling algorithms described in detail i
 %\end{equation}
 %If the same energy definition is used in the physics and dynamical core, and an energy conservative physics dynamics coupling method is used, then $\partial \gi{E}_{phys}^{({param})}$.
 
-\item $\partial \gi{E}^{({efix})}$: Global energy fixer tendency, defined in Eqn. {\ref{efix.def}} is applied at the beginning of the parameterizations. The correction needed is the global average difference between the state passed from the dynamics and the state that was saved after the physics updated the state  but before the dry mass correction. It includes all spurious sources from the dry mass correction, remappings between physics and dynamics, dynamical core, differing energy definitions (if present), hyerviscosity, and vertical remapping.
+\item $\partial \gi{E}^{({efix})}$: Global energy fixer tendency, defined in \eqref{efix.def} is applied at the beginning of the parameterizations. The correction needed is the global average difference between the state passed from the dynamics and the state that was saved after the physics updated the state  but before the dry mass correction. It includes all spurious sources from the dry mass correction, remappings between physics and dynamics, dynamical core, differing energy definitions (if present), hyerviscosity, and vertical remapping.
 
 \end{enumerate}
 
@@ -477,7 +477,7 @@ Various configurations are used and referred to in terms of the $COMPSET$ (Compo
  \begin{figure}[h]
  \centering
  \includegraphics[width=35pc]{figs/dEdt.pdf}
- \caption{Monthly averaged TE tendencies as a function of time for various aspects of the TE consistent configuration of CAM-SE run in AMIP-type configuration with perpetual year 2000 SSTs. Left Figure shows $\partial \gi{E}$ TE tendencies in physics and, for comparison, TE tendency for the adiabatic dynamical core. The right plot shows the break-down of $\partial \gi{E}$ for the dynamical core. These plots show that the energy tendency from the dynamical core is quite constant (to within $\sim 0.02W/m^2$ or less) so only one month simulations is adequeate to assess energy diagnostics for the dynamical core. For more details see Section \ref{sec:consistent}.}
+ \caption{Monthly averaged TE tendencies as a function of time for various aspects of the TE consistent configuration of CAM-SE run in AMIP-type configuration with perpetual year 2000 SSTs. Left Figure shows $\partial \gi{E}$ TE tendencies in physics and, for comparison, TE tendency for the adiabatic dynamical core. The right plot shows the break-down of $\partial \gi{E}$ for the dynamical core. These plots show that the energy tendency from the dynamical core is quite constant (to within $\sim 0.02W/m^2$ or less) so only one month simulations is adequate to assess energy diagnostics for the dynamical core. For more details see Section \ref{sec:consistent}.}
  \label{fig:dEdt(t)}
   \end{figure}
 
@@ -505,7 +505,7 @@ The majority of the noise with {\em{state-update}} ({\tt{ftype=1}}) physics-dyna
 \subsubsection{Spurious TE tendencies from physics-dynamics coupling}
 When using the same TE formula in the dynamical core and physics the spurious TE tendency from physics-dynamics coupling can be assessed. Since the pressure fields evolve during {\em{dribbling}} of physics forcing, the TE increments from the forcing change. For {\em{dribbling}} ({\tt{ftype=0}}) and {\em{combination}} ({\tt{ftype=2}}) this tendency is $\partial \gi{E}^{({pdc})}=-0.05 W/m^2$ and thus rather small compared to the viscosity TE dissipation rates. Since $\partial \gi{E}^{({pdc})}$ are the same (to the second digit) for  {\em{dribbling}} ({\tt{ftype=0}}) and  {\em{combination}} ({\tt{ftype=2}}) it is the momentum and temperature {\em{dribbling}} errors that dominate $\partial \gi{E}^{({pdc})}$.
 
-{\color{red}{$\partial \gi{E}^{(pdc)}$ computed with \eqref{eq:pdc} is $3.709e-09$ and $\partial \gi{E}^{(pdc)}$ computed with \eqref{eq:pdc3} is $1.265e-05$. Why this discrepancy? Can we consider this noise?}} 
+%{\color{red}{$\partial \gi{E}^{(pdc)}$ computed with \eqref{eq:pdc} is $3.709e-09$ and $\partial \gi{E}^{(pdc)}$ computed with \eqref{eq:pdc3} is $1.265e-05$. Why this discrepancy? Can we consider this noise?}} 
 \subsection{{\em{vert limiter}}: Limiters on vertical remapping of momentum}\label{sec:ppm}
 CAM-SE uses a floating Lagrangian vertical coordinate \citep{S1945JAS,L2004MWR} which requires the remapping of the atmospheric state from floating levels back to reference levels to maintain computational stability and to provide state data consistent with the physics formulation. The mapping algorithm is based on the mass conservative PPM (Piecewise Parabolic Method) with options for shape-preserving limiters. In CAM-SE momentum components and internal energy are used as the variables mapped in the vertical \citep{LetAl2018JAMES} and, contrary to earlier versions of CAM-SE, there is no limiter on the remapping of wind components. If the shape-preserving limiter is used for momentum mapping then the TE dissipation increases by over an order of magnitude from $\sim 0.01W/m^2$ to $\sim 0.2W/m^2$ (Table \ref{table:TE}).
 \subsection{{\em{smooth topo}}: Smoother topography}\label{sec:topo}
@@ -531,7 +531,7 @@ using \eqref{eq:budget_efix}. With {\em{state-updating}} ({\tt{ftype=1}}) (i.e. 
 \subsection{{\em{QPC6}}: Simplified surface}\label{sec:QPC6}
 By running the model in aqua-planet configuration one can assess the effect of simplifying the surface boundary condition. In particular, without topography forcing the dynamical core is not challenged with respect to stationary near-grid-scale forcing. The TE tendency with respect to pressure work remains the same $\partial \gi{E}_{phys}^{({pwork})}$ as the AMIP-type simulations, however, the adiabatic dynamical core TE tendency reduces to $\partial \gi{E}_{dyn}^{({adiab})}=-0.14 W/m^2$ (approximately a factor 4 reduction). Most of that reduction is due to viscosity $\partial \gi{E}_{dyn}^{(hvis)}=-0.13 W/m^2$. The frictional heating is roughly the same as AMIP $\partial \gi{E}_{dyn}^{(fheat)}=0.48 W/m^2$ as is the vertical remapping  $\partial \gi{E}_{dyn}^{(remap)}=-0.01 W/m^2$. To evaluate the dynamical cores diffusion of TE it is therefore important to asses the model in a configuration with topography as the wave dynamics generated by topography leads to more active diffusion operators.
 \subsection{{\em{FHS94}}: Simplified physics (no moisture)}\label{sec:FHS94}
-Simplifying the setup even further by replacing the parameterizations with relaxation towards a zonally symmetric temperature profile and simple boundary layer friction (Held-Suarez forcing) as well as excluding moisture, the TE errors in the dynamical core decreases even further to $\sim 0.002W/m^2$ since there is no small scale forcing. Small scales are only created by the nonlinear dynamics abd the physics works to damp them. Hyperviscosity is less active leading to significant reductions compared to aqua-planet and `real-world' simulation results. The TE diffusion in vertical remapping reduces by an order of magnitude compared to the aqua-planet simulations ($\sim 0.0005W/m^2$). This further emphasizes that TE diffusion assessment in a simplified setup is not necessarily telling for the dynamical cores performance with moist physics and topography that challenge the dynamical core in terms of strong grid-scale forcing.
+Simplifying the setup even further by replacing the parameterizations with relaxation towards a zonally symmetric temperature profile and simple boundary layer friction (Held-Suarez forcing) as well as excluding moisture, the TE errors in the dynamical core decreases even further to $\sim 0.002W/m^2$ since there is no small scale forcing. Small scales are only created by the nonlinear dynamics and the physics works to damp them. Hyperviscosity is less active leading to significant reductions compared to aqua-planet and `real-world' simulation results. The TE diffusion in vertical remapping reduces by an order of magnitude compared to the aqua-planet simulations ($\sim 0.0005W/m^2$). This further emphasizes that TE diffusion assessment in a simplified setup is not necessarily telling for the dynamical cores performance with moist physics and topography that challenge the dynamical core in terms of strong grid-scale forcing.
 \subsection{{\em{FV}}: Changing dynamical core to Finite-Volume (FV)}\label{sec:cam-fv}
 As a comparison the TE error characteristics of the CAM-FV dynamical core are assessed. Although the TE diagnostics have not been implemented in the CAM-FV dynamical core, the TE diagnostics in CAM physics are independent of dynamical core and can therefore be activated with CAM-FV. The CAM-FV dynamical core uses {\em{state-update}} physics-dynamics coupling ({\tt{ftype=1}}) ($\partial \gi{E}^{(pdc)}=0$) and the same TE definition as CAM physics ($\partial \gi{E}^{(discr)}=0$). Hence \eqref{eq:pdc2} can be used to compute the TE errors of the CAM-FV dynamical core, $\partial \gi{E}^{(adiab)}_{dyn}\approx -1 W/m^2$. As we do not have the break-down of $\partial \gi{E}^{(adiab)}_{dyn}$ it can not be determined how much of the TE errors are due to the vertical remapping. Furthermore, CAM-FV contains intrinsic dissipation operators (limiters in the flux operators) making it difficult to assess TE sources/sinks due to dissipation. Note that the pressure work even with a change of dynamical core remains approximately the same as the CAM-SE configurations.
 \subsection{{\em{CSLAM}}: Quasi equal-area physics grid}\label{sec:cslam}
